Removed white-space nowrap from bulk filter name column. Fixed column width and adding some padding to avoid crowding the next column

--- a/adcolony/less/adcolony-custom.less
+++ b/adcolony/less/adcolony-custom.less
@@ -2255,3 +2255,9 @@ pre.pretty-json {
 #use-rate-tooltip {
   font-family: ProximaNova, 'Helvetica Neue', Helvetica, Arial, Sans-serif;
 }
+
+.region-ad-group-selector td.name {
+  width: 35%;
+  padding-right: 8px;
+  white-space: normal;
+}
